# PythonProject3

./: .gitignore  animals ai.py  automation2.py  camera rotation.py  cheat sheet 1.py  cheat sheet 1.py.BAK  download images.py  face detection.py  image rotation.py  main.py  mask.py  mask.py.BAK  pyproject.toml  rename images.py  rename_images.py  rock paper scissor.py  rock paper scissor.py.BAK
models/: model_unquant.tflite
