[project]
name = "pythonproject3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-images-download>=2.8.0",
    "mss>=10.0.0",
    "numpy>=2.1.3",
    "opencv-python>=4.11.0.86",
    "pyautogui>=0.9.54",
    "pynput>=1.8.1",
    "selenium>=4.31.0",
    "tensorflow>=2.19.0",
]
